Refactor `AbstractKanbanTest` to simplify row accessing and implement `equals` and `hashCode` in `JpaKanbanTestEntity`